--- a/document-scanner.ipynb
+++ b/document-scanner.ipynb
@@ -173,17 +173,14 @@
     "  # # theta: The resolution of the parameter \\theta in radians.\n",
     "  # # threshold: The minimum number of intersecting points to detecta line.\n",
     "\n",
-    "  lines = cv2.HoughLinesP(image = convex_hull_mask_grayscale, rho = 1, theta = np.pi / 180, minLineLength=200, maxLineGap=0, threshold=40)\n",
+    "  lines = cv2.HoughLinesP(image = convex_hull_mask_grayscale, rho = 1, theta = np.pi / 480, minLineLength=200, maxLineGap=640, threshold=640)\n",
     "\n",
     "  # draw all houghlines\n",
     "  if lines is not None:\n",
     "    for line in lines:\n",
     "      l = line[0]\n",
-    "      cv2.line(output, (l[0], l[1]), (l[2], l[3]), (0,255,0), 2, cv2.LINE_AA )\n",
+    "      cv2.line(output, (l[0], l[1]), (l[2], l[3]), (0,255,0), 5, cv2.LINE_AA )\n",
     "  \n",
-    "  # cv2.imshow('Lines', output) \n",
-    "  # if at any point there are at least four lines then find the corners\n",
-    "    \n",
     "  print(\"number of lines: \", len(lines))\n",
     "\n",
     "  if len(lines) >= 4:\n",
@@ -206,9 +203,6 @@
     "    corners = remove_similar_corners(all_corners)\n",
     "\n",
     "    print(\"final corners found: \", len(corners), corners)\n",
-    "\n",
-    "    for x, y in corners:\n",
-    "      cv2.circle(output, (int(x), int(y)),3, (0, 0, 255), 4)\n",
     "\n",
     "    # cv2.imshow('Corners', output)\n",
     "    # cv2.waitKey(10)\n",
@@ -254,36 +248,17 @@
     "\t# obtain a consistent order of the points and unpack them\n",
     "\t# individually\n",
     "\trect = order_points(pts)\n",
-    "\t# (tl, tr, br, bl) = rect\n",
-    "\t# # compute the width of the new image, which will be the\n",
-    "\t# # maximum distance between bottom-right and bottom-left\n",
-    "\t# # x-coordiates or the top-right and top-left x-coordinates\n",
-    "\t# widthA = np.sqrt(((br[0] - bl[0]) ** 2) + ((br[1] - bl[1]) ** 2))\n",
-    "\t# widthB = np.sqrt(((tr[0] - tl[0]) ** 2) + ((tr[1] - tl[1]) ** 2))\n",
-    "\t# maxWidth = max(int(widthA), int(widthB))\n",
-    "\tmaxWidth = 480\n",
+    "\tWIDTH = 480\n",
+    "\tHEIGHT = 640\n",
     "\n",
-    "\t# compute the height of the new image, which will be the\n",
-    "\t# maximum distance between the top-right and bottom-right\n",
-    "\t# y-coordinates or the top-left and bottom-left y-coordinates\n",
-    "\t# heightA = np.sqrt(((tr[0] - br[0]) ** 2) + ((tr[1] - br[1]) ** 2))\n",
-    "\t# heightB = np.sqrt(((tl[0] - bl[0]) ** 2) + ((tl[1] - bl[1]) ** 2))\n",
-    "\t# maxHeight = max(int(heightA), int(heightB))\n",
-    "\tmaxHeight = 640\n",
-    "\n",
-    "\t# now that we have the dimensions of the new image, construct\n",
-    "\t# the set of destination points to obtain a \"birds eye view\",\n",
-    "\t# (i.e. top-down view) of the image, again specifying points\n",
-    "\t# in the top-left, top-right, bottom-right, and bottom-left\n",
-    "\t# order\n",
     "\tdst = np.array([\n",
     "\t\t[0, 0],\n",
-    "\t\t[maxWidth - 1, 0],\n",
-    "\t\t[maxWidth - 1, maxHeight - 1],\n",
-    "\t\t[0, maxHeight - 1]], dtype = \"float32\")\n",
+    "\t\t[WIDTH - 1, 0],\n",
+    "\t\t[WIDTH - 1, HEIGHT - 1],\n",
+    "\t\t[0, HEIGHT - 1]], dtype = \"float32\")\n",
     "\t# compute the perspective transform matrix and then apply it\n",
     "\tM = cv2.getPerspectiveTransform(rect, dst)\n",
-    "\twarped = cv2.warpPerspective(image, M, (maxWidth, maxHeight))\n",
+    "\twarped = cv2.warpPerspective(image, M, (WIDTH, HEIGHT))\n",
     "\t# return the warped image\n",
     "\treturn warped\n"
    ]
@@ -297,17 +272,18 @@
     "def scan_document(input_img):\n",
     "  # Convert image to gray and blur it\n",
     "  input_grey = cv2.cvtColor(input_img, cv2.COLOR_BGR2GRAY)\n",
-    "  input_grey = cv2.GaussianBlur(input_grey, (3,3), 0)\n",
-    "  # ret, input_grey = cv2.threshold(input_grey, 130, 200, cv2.THRESH_BINARY)\n",
+    "  input_grey = cv2.GaussianBlur(input_grey, (5,5), 0)\n",
+    "  ret, input_grey = cv2.threshold(input_grey, 130, 200, cv2.THRESH_BINARY)\n",
+    "  \n",
     "\n",
     "  # cv2.imshow(\"BINARY\", input_grey)\n",
     "\n",
     "  img_copy = input_img.copy()\n",
     "\n",
-    "  edges = cv2.Canny(input_grey, 83, 300)\n",
-    "\n",
-    "  # cv2.imshow('Canny', edges)\n",
-    "  # cv2.waitKey(10)\n",
+    "  edges = cv2.Canny(input_grey, 50, 150)\n",
+    "  # to make the edges thick\n",
+    "  kernel = np.ones((5,5), np.uint8)\n",
+    "  # edges = cv2.dilate(edges, kernel, iterations=1)\n",
     "\n",
     "  corners = get_corners(edges, input_img)\n",
     "\n",
@@ -315,7 +291,29 @@
     "    print(\"INVALID CORNERS\")\n",
     "  else: \n",
     "    print(\"FINAL CORNERS: \", corners)\n",
+    "\n",
     "    # draw corner points on the image\n",
+    "    for x, y in corners:\n",
+    "      cv2.circle(input_img, (int(x), int(y)),10, (255, 0, 0), 4)\n",
+    "    \n",
+    "    top_left = corners[0]\n",
+    "    bottom_left = corners[1]\n",
+    "    top_right = corners[2]\n",
+    "    bottom_right = corners[3]\n",
+    "\n",
+    "\n",
+    "    cv2.line(input_img, (int(top_left[0]), int(top_left[1])), (int(top_right[0]), int(top_right[1])), (0,0,255), 10, cv2.LINE_AA )\n",
+    "\n",
+    "    cv2.line(input_img, (int(top_right[0]), int(top_right[1])), (int(bottom_right[0]), int(bottom_right[1])), (0,0,255), 10, cv2.LINE_AA )\n",
+    "\n",
+    "    cv2.line(input_img, (int(bottom_right[0]), int(bottom_right[1])), (int(bottom_left[0]), int(bottom_left[1])), (0,0,255), 10, cv2.LINE_AA )\n",
+    "\n",
+    "    cv2.line(input_img, (int(bottom_left[0]), int(bottom_left[1])), (int(top_left[0]), int(top_left[1])), (0,0,255), 10, cv2.LINE_AA )\n",
+    "\n",
+    "      \n",
+    "  \n",
+    "    cv2.imshow(\"LINES\", input_img)\n",
+    "    cv2.waitKey(10)\n",
     "\n",
     "    # perspective_transform(corners)\n",
     "    warped_img = four_point_transform(img_copy, corners)\n",
@@ -355,7 +353,7 @@
    "source": [
     "video = cv2.VideoCapture('videos/document-video-compress.mp4')\n",
     " \n",
-    " \n",
+    "# video.set(cv2.CAP_PROP_FPS, 1)\n",
     "# Loop until the end of the video\n",
     "while (video.isOpened()):\n",
     " \n",
@@ -368,33 +366,21 @@
     "    cv2.imshow('Video', frame)\n",
     "\n",
     "    warped_img = scan_document(frame)\n",
-    "    if warped_img is not None: \n",
-    "        cv2.imshow(\"Warp\", warped_img)\n",
-    " \n",
-    "    # conversion of BGR to grayscale is necessary to apply this operation\n",
-    "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
-    " \n",
-    "    # # adaptive thresholding to use different threshold\n",
-    "    # # values on different regions of the frame.\n",
-    "    # Thresh = cv2.adaptiveThreshold(gray, 255, cv2.ADAPTIVE_THRESH_MEAN_C, cv2.THRESH_BINARY_INV, 11, 2)\n",
-    " \n",
-    "    # cv2.imshow('Threxsh', Thresh)\n",
-    "    # define q as the exit button\n",
-    "    if cv2.waitKey(25) & 0xFF == ord('q'):\n",
-    "        break\n",
+    "    # if warped_img is not None: \n",
+    "    #     cv2.imshow(\"Warp\", warped_img)\n",
     " \n",
     "# release the video capture object\n",
     "video.release()\n",
     "# Closes all the windows currently opened.\n",
-    "# cv2.destroyAllWindows()"
+    "cv2.destroyAllWindows()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (scanner)",
+   "display_name": "Python 3.10.4 ('scanner')",
    "language": "python",
-   "name": "scanner"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
