--- a/document-scanner.ipynb
+++ b/document-scanner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1093,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1094,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1095,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1096,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1097,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1098,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1099,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,39 +180,38 @@
     "    for line in lines:\n",
     "      l = line[0]\n",
     "      cv2.line(output, (l[0], l[1]), (l[2], l[3]), (0,255,0), 5, cv2.LINE_AA )\n",
-    "  \n",
-    "  print(\"number of lines: \", len(lines))\n",
+    "    # print(\"number of lines: \", len(lines))\n",
     "\n",
-    "  if len(lines) >= 4:\n",
-    "    coefficients = []\n",
-    "    for line in lines:\n",
-    "      l = line[0]\n",
-    "      coefficients.append(get_line_coefficients((l[0], l[1]), (l[2], l[3])))\n",
-    "  \n",
-    "\n",
-    "    rows, cols = grayscale.shape\n",
-    "\n",
-    "    # get all the corners from lines\n",
-    "    all_corners = get_all_possible_corners(coefficients, rows, cols)\n",
-    "\n",
-    "    print(\"all corners found: \", len(all_corners), all_corners)\n",
-    "\n",
-    "    print(\"------------------------------------------------------\")\n",
-    "\n",
-    "    # remove corners that are similar to one corner\n",
-    "    corners = remove_similar_corners(all_corners)\n",
-    "\n",
-    "    print(\"final corners found: \", len(corners), corners)\n",
-    "\n",
-    "    # cv2.imshow('Corners', output)\n",
-    "    # cv2.waitKey(10)\n",
+    "    if len(lines) >= 4:\n",
+    "      coefficients = []\n",
+    "      for line in lines:\n",
+    "        l = line[0]\n",
+    "        coefficients.append(get_line_coefficients((l[0], l[1]), (l[2], l[3])))\n",
     "    \n",
-    "    return corners if len(corners) == 4 else None\n"
+    "\n",
+    "      rows, cols = grayscale.shape\n",
+    "\n",
+    "      # get all the corners from lines\n",
+    "      all_corners = get_all_possible_corners(coefficients, rows, cols)\n",
+    "\n",
+    "      # print(\"all corners found: \", len(all_corners), all_corners)\n",
+    "\n",
+    "      # print(\"------------------------------------------------------\")\n",
+    "\n",
+    "      # remove corners that are similar to one corner\n",
+    "      corners = remove_similar_corners(all_corners)\n",
+    "\n",
+    "      # print(\"final corners found: \", len(corners), corners)\n",
+    "\n",
+    "      # cv2.imshow('Corners', output)\n",
+    "      # cv2.waitKey(10)\n",
+    "      \n",
+    "      return corners if len(corners) == 4 else None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,8 +280,8 @@
     "  img_copy = input_img.copy()\n",
     "\n",
     "  edges = cv2.Canny(input_grey, 50, 150)\n",
-    "  # to make the edges thick\n",
-    "  kernel = np.ones((5,5), np.uint8)\n",
+    "  # to make the edges thick (causes stutter)\n",
+    "  # kernel = np.ones((5,5), np.uint8)\n",
     "  # edges = cv2.dilate(edges, kernel, iterations=1)\n",
     "\n",
     "  corners = get_corners(edges, input_img)\n",
@@ -325,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,9 +346,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "FINAL CORNERS:  [(135.00025215031076, 1410.98719764104), (156.98044954823013, 294.99262975577034), (993.0111411909037, 1421.9745314937136), (999.1766732935719, 301.08079522862823)]\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "FINAL CORNERS:  [(102.94497202350729, 1401.9337824318686), (168.06189127118503, 296.94975273666034), (1004.0126147785535, 1430.9681842539756), (989.5146146605199, 318.24667519490237)]\n",
+      "FINAL CORNERS:  [(96.11702182565585, 1400.0358336647612), (161.78258769389492, 297.86456655324076), (1001.0216433659259, 1429.0648536035528), (978.4606478339341, 319.0638734295582)]\n",
+      "FINAL CORNERS:  [(999.0041970298404, 1429.1603554849341), (969.974491253744, 320.02538997063107), (88.80369118417961, 1399.993709441261), (161.0034111675127, 298.94797969543146)]\n",
+      "FINAL CORNERS:  [(87.06318157145911, 1397.0351271444315), (158.44266144166934, 306.9684988407923), (992.9991266059909, 1426.9669314957926), (963.8483942243224, 323.2598916657259)]\n",
+      "FINAL CORNERS:  [(82.07402540516864, 1396.969338589575), (160.07547903630189, 310.9490995714891), (987.999346034791, 1426.9668657627415), (966.3935834196891, 332.2748932642487)]\n",
+      "FINAL CORNERS:  [(79.1390244811268, 1401.0696985505085), (157.14559046256028, 317.9785324236824), (989.0457981404995, 1430.7183462315443), (959.926143338855, 338.1488980738406)]\n",
+      "FINAL CORNERS:  [(75.92220538047937, 1402.9974381574252), (160.00197065137067, 324.97473343421194), (988.000884119099, 1433.0329599600143), (958.8207616407078, 345.19799396558756)]\n",
+      "FINAL CORNERS:  [(76.00261447290175, 1405.9671191584473), (161.32145902100035, 332.9571800770663), (985.9989296545162, 1435.9669976809182), (950.8788849020149, 353.0989511454596)]\n",
+      "INVALID CORNERS\n",
+      "FINAL CORNERS:  [(74.07827839206365, 1409.080663773208), (164.77142857142857, 343.94), (992.0569358178054, 1444.709972394755), (956.1147190771203, 365.24539628284555)]\n",
+      "FINAL CORNERS:  [(73.0950259699451, 1405.9645108223508), (169.90608501854186, 351.0233828391882), (993.0408380016244, 1442.0408171765343), (951.0240793880165, 371.181266564852)]\n",
+      "INVALID CORNERS\n",
+      "FINAL CORNERS:  [(70.00770813844714, 1398.92187090739), (173.10367480957478, 353.9491601825623), (993.0046599356485, 1435.1178298013979), (951.0714318205941, 374.80620460645025)]\n",
+      "FINAL CORNERS:  [(995.0805017156104, 1429.5397782694922), (940.0033030883876, 376.0631790724327), (65.65619435272494, 1393.9101498382754), (175.11130339542933, 351.94043532390316)]\n",
+      "FINAL CORNERS:  [(67.8113305078202, 1384.7897638065497), (177.10849913929724, 347.9707512840977), (997.002139489428, 1422.0401748570373), (941.1380831252479, 373.0373386852115)]\n",
+      "FINAL CORNERS:  [(65.55862396370124, 1368.934117706256), (180.11836484632468, 340.9378588126263), (1002.1849221365158, 1411.745353185727), (947.7216869654613, 366.2880345761381)]\n",
+      "FINAL CORNERS:  [(65.6828179386129, 1358.824299398786), (181.0036806360139, 331.967226336711), (1004.0870945325605, 1395.4720403781946), (942.6462626353041, 357.0212586393192)]\n",
+      "FINAL CORNERS:  [(68.00512846878574, 1336.954383619748), (182.34341261087724, 319.94543519798674), (1011.5409492557376, 1380.2169430881452), (950.7983712122341, 345.25686334691153)]\n",
+      "FINAL CORNERS:  [(67.54632790441255, 1316.8390571450132), (187.0039029036291, 305.96697290794526), (1015.1817202912806, 1360.0607398080401), (954.1088193115526, 331.40148605144407)]\n",
+      "FINAL CORNERS:  [(69.65778162759588, 1293.8943553869433), (188.2433323312712, 290.94198587619786), (1022.1891935533479, 1336.857818411097), (954.6229380397077, 316.2517482840062)]\n",
+      "INVALID CORNERS\n",
+      "FINAL CORNERS:  [(69.8077822081672, 1245.5377423346624), (194.1327084361125, 250.93833251110016), (1037.8200305782232, 1289.4409527142777), (958.2381441441178, 276.1729902293302)]\n",
+      "FINAL CORNERS:  [(71.80353399221323, 1217.5717280622941), (195.12857843939145, 230.9713724848683), (1044.3221565282552, 1262.096677045872), (965.2254749906061, 256.27021928352843)]\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "FINAL CORNERS:  [(60.799299883313886, 1244.0), (208.99877853410797, 380.0071210630575), (1059.632944228275, 1244.0), (922.11555168137, 374.9351667732477)]\n",
+      "FINAL CORNERS:  [(56.67217103062373, 1238.9067603320864), (1057.4912426449102, 1245.4196827070168), (205.03157894736842, 376.0), (919.8522427440633, 376.0)]\n",
+      "FINAL CORNERS:  [(50.33529411764706, 1241.0), (1054.9502617801047, 1241.0), (204.71058823529413, 372.0), (917.3206806282723, 372.0)]\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "FINAL CORNERS:  [(41.109026963657676, 1236.0), (1045.0580474934036, 1236.0), (195.24736225087926, 371.0), (908.1187335092349, 371.0)]\n",
+      "FINAL CORNERS:  [(35.234042553191486, 1235.0), (1039.6103542234332, 1235.0), (194.5531914893617, 371.0), (907.7738419618529, 371.0)]\n",
+      "FINAL CORNERS:  [(32.150765606595996, 1233.0), (1035.6070460704607, 1233.0), (190.8161484710451, 374.99420349097267), (904.6254037591904, 369.92453548466483)]\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "FINAL CORNERS:  [(70.79974968710889, 1196.0), (1024.5826330532213, 1196.0), (210.37171464330413, 382.0), (895.7563025210084, 382.0)]\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "FINAL CORNERS:  [(67.86363636363636, 1185.0), (1016.9887640449438, 1185.0), (210.8230583249266, 381.9938851536038), (883.834184680203, 376.99380249123175)]\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n",
+      "FINAL CORNERS:  [(999.7914572864322, 1194.0), (69.48354430379747, 1194.0), (873.0011869637467, 393.0074985963683), (206.51453583526813, 398.01115213336885)]\n",
+      "INVALID CORNERS\n",
+      "INVALID CORNERS\n"
+     ]
+    },
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.6.0) /Users/runner/work/opencv-python/opencv-python/opencv/modules/highgui/src/window.cpp:967: error: (-215:Assertion failed) size.width>0 && size.height>0 in function 'imshow'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[1;32m/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb Cell 13'\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000012?line=7'>8</a>\u001b[0m     ret, frame \u001b[39m=\u001b[39m video\u001b[39m.\u001b[39mread()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000012?line=8'>9</a>\u001b[0m     \u001b[39m# frame = cv2.resize(frame, (540, 380), fx = 0, fy = 0,\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000012?line=9'>10</a>\u001b[0m     \u001b[39m#                      interpolation = cv2.INTER_CUBIC)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000012?line=10'>11</a>\u001b[0m  \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000012?line=11'>12</a>\u001b[0m     \u001b[39m# Display the resulting frame\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000012?line=12'>13</a>\u001b[0m     cv2\u001b[39m.\u001b[39;49mimshow(\u001b[39m'\u001b[39;49m\u001b[39mVideo\u001b[39;49m\u001b[39m'\u001b[39;49m, frame)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000012?line=14'>15</a>\u001b[0m     warped_img \u001b[39m=\u001b[39m scan_document(frame)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000012?line=15'>16</a>\u001b[0m     \u001b[39m# if warped_img is not None: \u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000012?line=16'>17</a>\u001b[0m     \u001b[39m#     cv2.imshow(\"Warp\", warped_img)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000012?line=17'>18</a>\u001b[0m  \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/karanhejmadi/Desktop/python-document-scanner/document-scanner.ipynb#ch0000012?line=18'>19</a>\u001b[0m \u001b[39m# release the video capture object\u001b[39;00m\n",
+      "\u001b[0;31merror\u001b[0m: OpenCV(4.6.0) /Users/runner/work/opencv-python/opencv-python/opencv/modules/highgui/src/window.cpp:967: error: (-215:Assertion failed) size.width>0 && size.height>0 in function 'imshow'\n"
+     ]
+    }
+   ],
    "source": [
     "video = cv2.VideoCapture('videos/document-video-compress.mp4')\n",
     " \n",
