--- a/scanner.ipynb
+++ b/scanner.ipynb
@@ -8,7 +8,6 @@
    "source": [
     "import cv2\n",
     "import numpy as np\n",
-    "import random as rng\n",
     "from math import sqrt"
    ]
   },
@@ -355,7 +354,16 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "def scanDocument(src_img): \n",
     "\n",
